# ballcone

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.demo  LICENSE  Makefile  Pipfile  README.md  app.py  balcone.py  balcone.service  ballcone.service  ballcone.spec  debug_protocol.py  docker-compose.yml  duckdb_dao.py  monetdb_dao.py  nginx-conf.txt  pyproject.toml  record.capnp  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  syslog_protocol.py  web_balcone.py
.github/: dependabot.yml
.github/workflows/: docker.yml  pypi.yml  test.yml
balcone/: __main__.py  core.py  debug_protocol.py  duckdb_dao.py  monetdb_dao.py  syslog_protocol.py  test_duckdb_dao.py  test_monetdb_dao.py  web_balcone.py
balcone/templates/: layout.html  nginx.html  root.html  service.html  sql.html
ballcone/: __main__.py  core.py  dao.py  debug_protocol.py  monetdb_dao.py  syslog_protocol.py  test_dao.py  test_monetdb_dao.py  web_ballcone.py
ballcone/templates/: layout.html  nginx.html  root.html  service.html  sql.html
demo/: nginx.conf  supervisord.conf
templates/: chart_callback.js  home.html  layout.html  nginx.html  root.html  service.html  sql.html
tools/: duck-upgrade.sh  monet2duck.py
