[metadata]
name = ballcone
version = attr: ballcone.__version__
url = https://github.com/dustalov/ballcone
author = Dmitry Ustalov
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Internet :: Log Analysis
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed
license = MIT
description = Ballcone is a fast and lightweight server-side Web analytics solution.
long_description = file: README.md
keywords = Web analytics, log analysis, columnar storage, syslog, nginx

[options]
zip_safe = True
install_requires =
    httpagentparser==1.9.0
    maxminddb-geolite2==2018.703
    aiohttp==3.7.2
    aiohttp-jinja2==1.2.0
    monetdblite==0.6.4
    PyPika==0.43.0
    simplejson==3.17.2
    python-dateutil==2.8.1
python_requires = ~=3.6
include_package_data = True
packages = ballcone

[options.entry_points]
console_scripts =
    ballcone = ballcone.__main__:main

[options.package_data]
ballcone/templates = ballcone/templates/*
