[metadata]
name = ballcone
version = attr: ballcone.__version__
url = https://github.com/dustalov/ballcone
author = Dmitry Ustalov
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Internet :: Log Analysis
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed
license = MIT
description = Ballcone is a fast and lightweight server-side Web analytics solution.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Web analytics, log analysis, columnar storage, syslog, nginx

[options]
zip_safe = True
python_requires = ~=3.7
include_package_data = True
packages = ballcone

[options.entry_points]
console_scripts =
    ballcone = ballcone.__main__:main

[options.package_data]
ballcone/templates = ballcone/templates/*
