[metadata]
name = ballcone
version = attr: ballcone.__version__
url = https://github.com/dustalov/ballcone
author = Dmitry Ustalov
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Internet :: Log Analysis
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed
license = MIT
description = Ballcone is a fast and lightweight server-side Web analytics solution.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Web analytics, log analysis, columnar storage, syslog, nginx

[options]
zip_safe = True
install_requires =
    httpagentparser
    maxminddb-geolite2
    aiohttp
    aiohttp-jinja2
    duckdb
    PyPika
    simplejson
    python-dateutil
python_requires = ~=3.9
include_package_data = True
packages = ballcone

[options.entry_points]
console_scripts =
    ballcone = ballcone.__main__:main

[options.package_data]
ballcone/templates = ballcone/templates/*

[mypy]
ignore_missing_imports = True
allow_untyped_calls = True
allow_untyped_decorators = True
warn_unused_ignores = False
strict = True

[flake8]
select = E,W,F
ignore = E122,E123,E127,E131,E203,E225,E226,E24,E275,E305,E306,E402,E722,E731,E741,F722,W503,W504,C9,N8
max-line-length = 200
